fixed alignment in mobile navigation

--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ header nav #click {
 
 .nav-container header nav ul {
   position: absolute;
-  top: 45px;
+  top: 65px;
   left: -100%;
   width: 100%;
   height: 100vh;
